@@ -7,7 +7,7 @@
 <script type="text/javascript" src="/splitter.js"></script>
 <style type="text/css">
 #identities-list { width: <roundcube:exp expression="!empty(cookie:identviewsplitter) ? cookie:identviewsplitter-5 : 295" />px; }
-#identity-details { left: <roundcube:exp expression="!empty(cookie:identviewsplitter) ? cookie:identviewsplitter+5 : 305" />px;
+#identity-box { left: <roundcube:exp expression="!empty(cookie:identviewsplitter) ? cookie:identviewsplitter+5 : 305" />px;
   <roundcube:exp expression="browser:ie ? ('width:expression((parseInt(this.parentNode.offsetWidth)-'.(!empty(cookie:identviewsplitter) ? cookie:identviewsplitter+5 : 305).')+\\'px\\');') : ''" />
 }
 </style>
@@ -32,14 +32,12 @@
 </div>
 
 <script type="text/javascript">
-  var identviewsplit = new rcube_splitter({id:'identviewsplitter', p1: 'identities-list', p2: 'identity-details', orientation: 'v', relative: true, start: 300 });
+  var identviewsplit = new rcube_splitter({id:'identviewsplitter', p1: 'identities-list', p2: 'identity-box', orientation: 'v', relative: true, start: 300 });
   rcmail.add_onload('identviewsplit.init()');
 </script>
 
-<div id="identity-details">
-  <div style="margin:10px auto; text-align:center">
-  <img src="/images/watermark.gif" width="260" height="228" alt="" />
-  </div>
+<div id="identity-box">
+  <roundcube:object name="identityframe" id="identity-frame" width="100%" height="100%" frameborder="0" src="/watermark.html" />
 </div>
 
 </div>
