@@ -13,43 +13,20 @@
 </style>
 
 </head>
-<body>
+<body class="iframe">
 
-<roundcube:include file="/includes/taskbar.html" />
-<roundcube:include file="/includes/header.html" />
-<roundcube:include file="/includes/settingstabs.html" />
-
-<div id="mainscreen">
-
-<div id="identities-list">
-<div id="identity-title" class="boxtitle"><roundcube:label name="identities" /></div>
-<div class="boxlistcontent">
-<roundcube:object name="identitiesList" id="identities-table" class="records-table" cellspacing="0" summary="Identities list" noheader="true" editIcon="" />
-</div>
-<div class="boxfooter">
-<roundcube:button command="add" type="link" title="newidentity" class="buttonPas addgroup" classAct="button addgroup" content=" " condition="config:identities_level:0<2" />
-</div>
-</div>
-
-<script type="text/javascript">
-  var identviewsplit = new rcube_splitter({id:'identviewsplitter', p1: 'identities-list', p2: 'identity-details', orientation: 'v', relative: true, start: 300 });
-  rcmail.add_onload('identviewsplit.init()');
-</script>
-
-<div id="identity-details">
 <div id="identity-title" class="boxtitle"><roundcube:object name="steptitle" /></div>
 
-<div class="boxcontent">
+<div id="identity-details" class="boxcontent">
 <roundcube:object name="identityform" id="identity-form" size="40" textareacols="70" textarearows="6" />
-<p>
-<roundcube:button command="delete" type="input" class="button" label="delete" condition="env:action=='edit-identity'" style="margin-right:0.5em" />
-<roundcube:button command="save" type="input" class="button mainaction" label="save" />
-</p>
-</div>
 <script type="text/javascript">rcube_init_tabs('identity-form')</script>
 
+<div id="formfooter">
+<div class="footerleft">
+  <roundcube:button command="delete" type="input" class="button" label="delete" condition="env:action=='edit-identity'" style="margin-right:0.5em" />
+  <roundcube:button command="save" type="input" class="button mainaction" label="save" />
 </div>
-
+</div>
 </div>
 
 </body>
